--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
 :root {
+    --color-white: #ffffff;
     --color-theme: #ff7373;
     --color-dark: #222529;
     --linear-gradient-dark: #e6e6e6;
@@ -25,12 +26,61 @@ a:hover {
     text-decoration: underline;
 }
 
+.logo {
+    font-size: 35px;
+    font-weight: 700;
+}
 
 .__navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+    .__navbar .__nav-links {
+        font-weight: 500;
+    }
+    
+        .__navbar .__nav-links a {
+            color: var(--color-dark);
+            font-weight: 500;
+            text-decoration:  none;
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+
+            .__navbar .__nav-links a:hover {
+                color: var(--color-theme);
+                text-decoration: none;
+            }
+
+            .__navbar .__nav-links a:active
+            .__navbar .__nav-links .__active {
+                color: var(--color-theme);
+                text-decoration: none;
+            }
+
+    .__nav-icon-links {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }        
+            
+        .__navbar .__nav-icon-links a {
+            background-color: var(--color-white);
+            color: var(--color-dark);
+            width: 36px;
+            height: 36px;
+            margin-left: 20px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            box-shadow: 0 0 10px 8px var(--color-dark);
+        }
+
+                
+
+
 
 
 
