--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,11 @@
     --color-white: #ffffff;
     --color-theme: #ff7373;
     --color-dark: #222529;
+    --color-shadow: rgba(0, 0, 0, 0.129);
     --linear-gradient-dark: #e6e6e6;
     --linear-gradinet-light: #f5f5f5;
 
-    --max-width 1680px;
+    --max-width: 1680;
 }
 
 html, body {
@@ -26,15 +27,27 @@ a:hover {
     text-decoration: underline;
 }
 
-.logo {
+.__gradient-gray {
+    background: var(--linear-gradient-dark);
+    background: linear-gradient(90deg, var(--linear-gradient-dark) 50%, var(--linear-gradient-dark) 50%);
+}
+
+.__logo {
     font-size: 35px;
     font-weight: 700;
+}
+
+.bg-theme {
+    background-color: var(--color-theme);    
 }
 
 .__navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
 }
 
     .__navbar .__nav-links {
@@ -75,10 +88,21 @@ a:hover {
             border-radius: 50%;
             display: flex;
             justify-content: center;
-            box-shadow: 0 0 10px 8px var(--color-dark);
+            align-items: center;
+            box-shadow: 0 0 6px 4px var(--color-shadow);
+            position: relative;
         }
 
-                
+            .__navbar .__nav-icon-links a:hover {
+                color: var(--color-theme);
+                text-decoration: none;
+            }
+
+.showcase {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}   
 
 
 
