--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,7 @@
     --color-white: #ffffff;
     --color-theme: #ff7373;
     --color-dark: #222529;
+    --color-darkgray: #434343;
     --color-shadow: rgba(0, 0, 0, 0.129);
     --linear-gradient-dark: #e6e6e6;
     --linear-gradinet-light: #f5f5f5;
@@ -46,22 +47,43 @@ a:hover {
     text-align: center;
     background-color: var(--color-theme);
     color: var(--color-white);
-    padding: 24px 50px;
+    padding: 20px 50px;
+    transition: all 0.2s ease-in-out;
 }
+
+    .__btn-theme {
+        color: var(--color-white);
+    }
+
+    .__btn-theme:hover {
+        color: var(--color-white);
+        text-decoration: none;
+        background-color: var(--color-dark);
+    }
 
     .__btn-theme .__btn-theme-left,       
     .__btn-theme .__btn-theme-right {
         position: absolute;
-        top: 0;
-        left: 0;
         height: 20px;
         width: 20px;
-        background-color: #ffffff;
     }
 
     .__btn-theme .__btn-theme-left {
-        border-left: 1px solid #ffffff;
+        top: 10px;
+        left: 10px;
+        border-left: 1px solid #fff;
         border-top:  1px solid var(--color-white);
+    }
+
+    .__btn-theme .__btn-theme-right {
+        bottom: 10px;
+        right: 10px;
+        border-right: 1px solid #fff;
+        border-bottom:  1px solid var(--color-white);
+    }
+
+    header {
+        margin-bottom: 135px;
     }
 
 .__navbar {
@@ -149,6 +171,56 @@ a:hover {
             margin-bottom: 35px;
             font-size: 20px;
         }
+
+.__featured-products{
+
+}
+
+    .__featured-products .container {
+            max-width: 1000px;
+    }
+
+    .__featured-products .card {
+        border: 2px;
+
+    }
+
+        .card img, 
+        .card .img {
+            height: 210px;
+            width: 255px;
+            background-color: var(--linear-gradinet-light);                
+        }
+
+            .card .card-body {
+                text-align: center;
+            }
+            
+            .card .card-body .card-category {
+                font-size: 13px;
+                font-weight: 500;
+                color: var(--color-darkgray);
+            }
+            
+            .card .card-body .card-title {
+                font-size: 16px;
+                font-weight: 600;
+            }
+            
+            .card .card-body .card-rating {
+                color: var(--color-theme);
+            }
+            
+            .card .card-body .card-price {
+                font-size: 18px;
+                font-weight: 600;
+            }
+
+    .card:hover {
+
+    }
+
+            
 
 
 
