--- a/CSS/style.css
+++ b/CSS/style.css
@@ -139,7 +139,8 @@ a:hover {
         }
 
             .__navbar .__nav-icon-links a:hover {
-                color: var(--color-theme);
+                color: var(--color-white);
+                background-color: var(--color-dark);
                 text-decoration: none;
             }
 
@@ -189,7 +190,8 @@ a:hover {
         .card .img {
             height: 210px;
             width: 255px;
-            background-color: var(--linear-gradinet-light);                
+            background-color: var(--linear-gradinet-light);
+            position: relative;                
         }
 
             .card .card-body {
@@ -216,18 +218,49 @@ a:hover {
                 font-weight: 600;
             }
 
-        .card:hover {
-
+    .card .card-menu {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        display: none;
+    }        
+            
+    .card .card-menu a {
+            background-color: var(--color-white);
+            color: var(--color-dark);
+            width: 36px;
+            height: 36px;
+            margin-bottom: 15px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 6px 4px var(--color-shadow);
+            position: relative;
         }
 
-    .card .__btn-theme {
-        display: flex;
-        width: 100%;
-        align-items: center;
-        justify-content: center;
-        height: 50px;
+        .card .card-menu a:hover {
+                color: var(--color-white);
+                background-color: var(--color-dark);
+                text-decoration: none;
+            }
 
-        
+    .card:hover .card-menu {
+        display: block;        
+    }
+    
+.card .__btn-card-theme {
+    position: absolute;
+    bottom: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+}
+
+    .card:hover .__btn-card-theme {
+        display: flex;
     }
 
             
