--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
     --color-darkgray: #434343;
     --color-shadow: rgba(0, 0, 0, 0.129);
     --linear-gradient-dark: #e6e6e6;
-    --linear-gradinet-light: #f5f5f5;
+    --linear-gradient-light: #f5f5f5;
 
     --max-width: 1680;
 }
@@ -17,6 +17,11 @@ html, body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 16px;
+}
+
+.border {
+    border: 1px; 
+    border-color: #ff7373;
 }
 
 a {
@@ -50,6 +55,7 @@ a:hover {
     color: var(--color-white);
     padding: 20px 50px;
     transition: all 0.2s ease-in-out;
+    /* margin-left: 40px; */
 }
 
     .__btn-theme {
@@ -84,7 +90,7 @@ a:hover {
     }
 
     header {
-        margin-bottom: 135px;
+        /* margin-bottom: 135px; */
     }
 
 .__navbar {
@@ -93,7 +99,6 @@ a:hover {
     align-items: center;
     padding-top: 30px;
     padding-bottom: 30px;
-
 }
 
     .__navbar .__nav-links {
@@ -104,8 +109,8 @@ a:hover {
             color: var(--color-dark);
             font-weight: 500;
             text-decoration:  none;
-            margin-left: 15px;
-            margin-right: 15px;
+            margin-right: 20px;
+            margin-left: 20px;
         }
 
             .__navbar .__nav-links a:hover {
@@ -150,6 +155,9 @@ a:hover {
     justify-content: space-between;
     align-items: center;
     height: 846px;
+    background-color: var(--linear-gradient-dark);
+    margin-bottom: 135px;
+    
     }
     .__showcase .__img-left {
         margin-left: 120px;
@@ -191,7 +199,7 @@ a:hover {
         .card .img {
             height: 210px;
             width: 255px;
-            background-color: var(--linear-gradinet-light);
+            background-color: var(--linear-gradient-light);
             position: relative;                
         }
 
