--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,7 +90,7 @@ a:hover {
     }
 
     header {
-        /* margin-bottom: 135px; */
+        max-width: 100px;
     }
 
 .__navbar {
@@ -187,12 +187,12 @@ a:hover {
 }
 
     .__featured-products .container {
-            max-width: 1000px;
+        max-width: 1100px;
+        border: 2px;
     }
 
     .card {
         border: 2px;
-
     }
 
         .card img, 
@@ -203,7 +203,7 @@ a:hover {
             position: relative;                
         }
 
-            .card .card-body {
+        .card .card-body {
                 text-align: center;
             }
             
@@ -258,14 +258,13 @@ a:hover {
         display: block;        
     }
     
-.card .__btn-card-theme {
-    position: absolute;
-    bottom: 0;
-    display: none;
-    align-items: center;
-    justify-content: center;
+.card .__btn-theme {
+    display: inline-block;
     width: 100%;
-    height: 50px;
+
+
+
+
 }
 
     .card:hover .__btn-card-theme {
