--- a/CSS/style.css
+++ b/CSS/style.css
@@ -258,13 +258,14 @@ a:hover {
         display: block;        
     }
     
-.card .__btn-theme {
-    display: inline-block;
+.card .btn-card-theme {
+    position: absolute;
+    bottom: 0;
+    display: none;
+    align-items: center;
+    justify-content: center ;
     width: 100%;
-
-
-
-
+    height: 50px;
 }
 
     .card:hover .__btn-card-theme {
