--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
 :root {
     --color-white: #ffffff;
     --color-theme: #ff7373;
+    --color-light-gray: #70707066;
     --color-gray: #BBBBBB;
     --color-dark: #222529;
     --color-darkgray: #434343;
@@ -32,10 +33,6 @@ a {
 a:hover {
     color: var(--color-theme);
     text-decoration: underline;
-}
-
-.container {
-
 }
 
 .__active {
@@ -109,6 +106,10 @@ a:hover {
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
+    .__navbar {
+        max-width: 1110px;
+    }
 
     .__navbar .__nav-links {
         font-weight: 500;
@@ -306,31 +307,84 @@ a:hover {
         color: var(--color-white);
         margin-bottom: 40px;
     }
+
 .__flashsales {
     width: 75%
 }
 
-.breadcrumb-list {
+.breadcrumb {
+    margin-top: 20px;
+}
+
+.breadcrumb .container {
+    max-width: 1110px;
+}
+
+.breadcrumb .breadcrumb-list {
     list-style: none;
     margin: 0 0 40px 0;
     padding: 0;
     color: var(--color-theme);
 }
-    .breadcrumb-list li {
+    .breadcrumb .breadcrumb-list li {
         display: inline-block;
         font-weight: 500;
     }
 
-        .breadcrumb-list li + li::before {
-            content: ">00a0";
+        .breadcrumb .breadcrumb-list li + li:before {
+            content: "/\00a0";
             font-weight: 400;
             color: var(--color-dark);
         }
 
-        .breadcrumb-list li a {
+        .breadcrumb .breadcrumb-list li a {
             color: var(--color-dark);
         }
 
+            .breadcrumb .breadcrumb-list li a:hover {
+                color: var(--color-theme);
+            }
+
+.map {
+    margin-bottom: 70px;
+}
+
+.map .google-map {
+    border:0; width: 100%; height: 380px;
+}
+
+.contact-form {
+    margin-top: 60px;
+}
+
+    .contact-form .container {
+        max-width: 1110px;
+    }
+
+    .contact-form h2 {
+        font-size: 18px;
+        font-weight: 700;
+        margin-bottom: 30px;
+    }
+
+    .contact-form form {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 40px;
+    }
+
+    .contact-form form input {
+        padding: 18px 18px;
+        border: 1px solid var(--color-light-gray)
+    }
+
+    .contact-form form textarea {
+        grid-column: 1 / -1;
+        padding: 18px 18px;
+        border: 1px solid var(--color-light-gray);
+        height: 140px;
+        resize: none;
+    }
 
             
 
