--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,46 +54,7 @@ a:hover {
     background-color: var(--color-theme);    
 }
 
-.__btn-theme {
-    position: relative;
-    text-align: center;
-    background-color: var(--color-theme);
-    color: var(--color-white);
-    padding: 20px 50px;
-    transition: all 0.2s ease-in-out;
-    /* margin-left: 40px; */
-}
 
-    .__btn-theme {
-        color: var(--color-white);
-    }
-
-    .__btn-theme:hover {
-        color: var(--color-white);
-        text-decoration: none;
-        background-color: var(--color-dark);
-    }
-
-    .__btn-theme .__btn-theme-left,       
-    .__btn-theme .__btn-theme-right {
-        position: absolute;
-        height: 20px;
-        width: 20px;
-    }
-
-    .__btn-theme .__btn-theme-left {
-        top: 10px;
-        left: 10px;
-        border-left: 1px solid #fff;
-        border-top:  1px solid var(--color-white);
-    }
-
-    .__btn-theme .__btn-theme-right {
-        bottom: 10px;
-        right: 10px;
-        border-right: 1px solid #fff;
-        border-bottom:  1px solid var(--color-white);
-    }
 
     header {
         max-width: 100px;
@@ -386,11 +347,92 @@ a:hover {
         resize: none;
     }
 
+    .contact-form form button {
+        display: flex;
+        justify-content: flex-start;
+    }
+
             
+.btn-theme {
+    position: relative;
+    background-color: var(--color-theme);
+    color: var(--color-white);
+    border: none;
+    padding: 20px 50px;    
+    transition: all 0.2s ease-in-out;
+    font-weight: 600;
+}
+
+    .btn-theme:hover {
+        color: var(--color-white);
+        text-decoration: none;
+        background-color: var(--color-dark);
+    }
+
+    .btn-theme .corner-topLeft {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        top: 10px;
+        left: 10px;
+        border-left: 1px solid var(--color-white);
+        border-top: 1px solid var(--color-white);
+    }    
+    .btn-theme .corner-bottomRight {
+        position: absolute;
+        height: 20px;
+        width: 20px;
+        bottom: 10px;
+        right: 10px;
+        border-right: 1px solid var(--color-white);
+        border-bottom: 1px solid var(--color-white);
+    }    
 
 
 
 
+
+
+    .__btn-theme {
+        position: relative;
+        text-align: center;
+        background-color: var(--color-theme);
+        color: var(--color-white);
+        padding: 20px 50px;
+        transition: all 0.2s ease-in-out;
+        /* margin-left: 40px; */
+    }
+    
+        .__btn-theme {
+            color: var(--color-white);
+        }
+    
+        .__btn-theme:hover {
+            color: var(--color-white);
+            text-decoration: none;
+            background-color: var(--color-dark);
+        }
+    
+        .__btn-theme .__btn-theme-left,       
+        .__btn-theme .__btn-theme-right {
+            position: absolute;
+            height: 20px;
+            width: 20px;
+        }
+    
+        .__btn-theme .__btn-theme-left {
+            top: 10px;
+            left: 10px;
+            border-left: 1px solid #fff;
+            border-top:  1px solid var(--color-white);
+        }
+    
+        .__btn-theme .__btn-theme-right {
+            bottom: 10px;
+            right: 10px;
+            border-right: 1px solid #fff;
+            border-bottom:  1px solid var(--color-white);
+        }    
 
 
 
