--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
 :root {
     --color-white: #ffffff;
     --color-theme: #ff7373;
+    --color-extra-light-gray: #f8f8f8;
     --color-light-gray: #70707066;
     --color-gray: #BBBBBB;
     --color-dark: #222529;
@@ -310,12 +311,13 @@ a:hover {
     margin-bottom: 70px;
 }
 
-.map .google-map {
-    border:0; width: 100%; height: 380px;
-}
+    .map .google-map {
+        border:0; width: 100%; height: 380px;
+    }
 
 .contact-form {
     margin-top: 60px;
+    margin-bottom: 60px;
 }
 
     .contact-form .container {
@@ -328,18 +330,24 @@ a:hover {
         margin-bottom: 30px;
     }
 
-    .contact-form form {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 40px;
+        .contact-form form {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 40px;
+        }
+
+            .contact-form form input {
+                width: 100%;
+                padding: 18px 18px;
+                border: 1px solid var(--color-light-gray)
+            }
+
+    .contact-form .textarea {
+        grid-column: 1 / -1;
     }
 
-    .contact-form form input {
-        padding: 18px 18px;
-        border: 1px solid var(--color-light-gray)
-    }
-
-    .contact-form form textarea {
+        .contact-form form textarea {
+        width: 100%;
         grid-column: 1 / -1;
         padding: 18px 18px;
         border: 1px solid var(--color-light-gray);
@@ -347,10 +355,18 @@ a:hover {
         resize: none;
     }
 
-    .contact-form form button {
-        display: flex;
-        justify-content: flex-start;
-    }
+        .contact
+
+        .contact-form form .errorMessage {
+            margin-top: 5px;
+            color: var(--color-theme);
+            font-size: 0.8em;
+        }
+
+        .contact-form form button {
+            display: flex;
+            justify-content: flex-start;
+        }
 
             
 .btn-theme {
@@ -432,7 +448,27 @@ a:hover {
             right: 10px;
             border-right: 1px solid #fff;
             border-bottom:  1px solid var(--color-white);
-        }    
+        }
+        
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-extra-light-gray);
+    height: 145px;
+}
+
+    footer .socialmedia {
+        margin-bottom: 25px;
+    }
+
+        footer .socialmedia a {
+            color: var(--color-dark);
+            text-decoration: none;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
 
 
 
